// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToastContent /> snapshot should match snapshot 1`] = `
<ToastContent>
  <div
    className="md-toast-content-wrapper"
  />
</ToastContent>
`;

exports[`<ToastContent /> snapshot should match snapshot with action 1`] = `
<ToastContent
  action="Action"
>
  <div
    className="md-toast-content-wrapper"
  >
    <div
      className="md-toast-content-scope"
    >
       
      <span
        className="md-toast-content-action"
      >
        Action
      </span>
    </div>
  </div>
</ToastContent>
`;

exports[`<ToastContent /> snapshot should match snapshot with action and actionColor 1`] = `
<ToastContent
  action="Action"
  actionColor="success"
>
  <div
    className="md-toast-content-wrapper"
  >
    <div
      className="md-toast-content-scope"
    >
       
      <span
        className="md-toast-content-action"
        data-color="success"
      >
        Action
      </span>
    </div>
  </div>
</ToastContent>
`;

exports[`<ToastContent /> snapshot should match snapshot with actor 1`] = `
<ToastContent
  actor="Actor"
>
  <div
    className="md-toast-content-wrapper"
  >
    <div
      className="md-toast-content-scope"
    >
      <span
        className="md-toast-content-actor"
      >
        Actor
      </span>
       
    </div>
  </div>
</ToastContent>
`;

exports[`<ToastContent /> snapshot should match snapshot with children 1`] = `
<ToastContent>
  <div
    className="md-toast-content-wrapper"
  >
    <div
      className="md-toast-content-info"
    >
      Information
    </div>
  </div>
</ToastContent>
`;

exports[`<ToastContent /> snapshot should match snapshot with children and info 1`] = `
<ToastContent
  info="Information"
>
  <div
    className="md-toast-content-wrapper"
  >
    <div
      className="md-toast-content-info"
    >
      Information
    </div>
  </div>
</ToastContent>
`;

exports[`<ToastContent /> snapshot should match snapshot with className 1`] = `
<ToastContent
  className="example-class"
>
  <div
    className="example-class md-toast-content-wrapper"
  />
</ToastContent>
`;

exports[`<ToastContent /> snapshot should match snapshot with complex props 1`] = `
<ToastContent
  action="Action"
  actionColor="success"
  actions={
    <ButtonGroup
      spaced={true}
    >
      <ButtonPill>
        Button
      </ButtonPill>
    </ButtonGroup>
  }
  actor="Actor"
  info="Information"
>
  <div
    className="md-toast-content-wrapper"
  >
    <div
      className="md-toast-content-scope"
    >
      <span
        className="md-toast-content-actor"
      >
        Actor
      </span>
       
      <span
        className="md-toast-content-action"
        data-color="success"
      >
        Action
      </span>
    </div>
    <div
      className="md-toast-content-info"
    >
      Information
    </div>
    <ButtonGroup
      className="md-toast-content-actions"
      spaced={true}
    >
      <div
        className="md-button-group-wrapper md-toast-content-actions"
        data-compressed={false}
        data-orientation="horizontal"
        data-round={false}
        data-separator={false}
        data-spaced={true}
      >
        <ButtonPill>
          <ButtonSimple
            aria-disabled={false}
            className="md-button-pill-wrapper"
            data-color="primary"
            data-disabled={false}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-outline={false}
            data-shallow-disabled={false}
            data-size={40}
          >
            <FocusRing>
              <FocusRing
                focusClass="md-focus-ring-wrapper children"
                focusRingClass="md-focus-ring-wrapper children"
              >
                <button
                  className="md-button-pill-wrapper md-button-simple-wrapper"
                  data-color="primary"
                  data-disabled={false}
                  data-ghost={false}
                  data-grown={false}
                  data-inverted={false}
                  data-outline={false}
                  data-shallow-disabled={false}
                  data-size={40}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="button"
                >
                  <span>
                    Button
                  </span>
                </button>
              </FocusRing>
            </FocusRing>
          </ButtonSimple>
        </ButtonPill>
      </div>
    </ButtonGroup>
  </div>
</ToastContent>
`;

exports[`<ToastContent /> snapshot should match snapshot with id 1`] = `
<ToastContent
  id="example-id"
>
  <div
    className="md-toast-content-wrapper"
    id="example-id"
  />
</ToastContent>
`;

exports[`<ToastContent /> snapshot should match snapshot with info 1`] = `
<ToastContent
  info="Information"
>
  <div
    className="md-toast-content-wrapper"
  >
    <div
      className="md-toast-content-info"
    >
      Information
    </div>
  </div>
</ToastContent>
`;

exports[`<ToastContent /> snapshot should match snapshot with style 1`] = `
<ToastContent
  style={
    Object {
      "color": "pink",
    }
  }
>
  <div
    className="md-toast-content-wrapper"
    style={
      Object {
        "color": "pink",
      }
    }
  />
</ToastContent>
`;
